--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       const button = document.getElementById('unmEnterBtn');
       
       function goToYouTube() {
-        window.location.href = 'https://www.youtube.com';
+        window.location.href = 'https://txtvoice2-ook7.vercel.app/';
       }
 
       button.addEventListener('click', goToYouTube);
