--- a/index.html
+++ b/index.html
@@ -151,32 +151,32 @@
 
     /* BOTÓN PRINCIPAL (MUY FORMAL) */
     .unm-button {
-      position: relative;
-      z-index: 20;
-      background: #0f1f2f; /* azul marino profundo */
-      border: 2px solid #b87c4b;
-      color: white;
-      font-size: 2.2rem;
-      font-weight: 500;
-      letter-spacing: 6px;
-      padding: 1.2rem 4rem 1.2rem 4.2rem;
-      border-radius: 48px;
-      cursor: pointer;
-      box-shadow: 0 4px 12px rgba(0, 15, 30, 0.2),
-                  inset 0 1px 2px rgba(255,255,255,0.08);
-      text-transform: uppercase;
-      transition: all 0.15s ease;
-      font-family: 'Inter', monospace;
-      backdrop-filter: blur(2px);
-      line-height: 1;
-      border-bottom-width: 4px;
-    }
+  position: relative;
+  z-index: 20;
+  background: #0f1f2f;
+  border: 2px solid #b87c4b;
+  color: white;
+  font-size: 1.6rem;              /* Reducido */
+  font-weight: 500;
+  letter-spacing: 4px;             /* Reducido */
+  padding: 0.8rem 2.5rem 0.8rem 2.7rem;  /* Reducido */
+  border-radius: 48px;
+  cursor: pointer;
+  box-shadow: 0 4px 12px rgba(0, 15, 30, 0.2),
+              inset 0 1px 2px rgba(255,255,255,0.08);
+  text-transform: uppercase;
+  transition: all 0.15s ease;
+  font-family: 'Inter', monospace;
+  backdrop-filter: blur(2px);
+  line-height: 1;
+  border-bottom-width: 3px;        /* Reducido */
+}
 
     .unm-button:hover {
       background-color: #1a2e42;
       border-color: #ca945d;
       box-shadow: 0 8px 18px -6px #0a1a2a;
-      letter-spacing: 7px;
+      letter-spacing: 5px;
       transform: translateY(-1px);
     }
 
